fix: Use ActionMenu in devices view on mobile
  There isn't enough room on a device line in the devices view to
  display both the « Revoke » and the « Configure » button on mobile so
  we replace them with an action menu.

  Since the last synchronization date was displayed on two lines which
  was not very elegant, we also move it to the action menu's bottom
  drawer on mobile.

--- a/src/styles/table.styl
+++ b/src/styles/table.styl
@@ -32,14 +32,17 @@
 
     +small-screen()
         .set-table-name
-            flex  0 0 60%
-
-        .set-table-date
-            flex 0 0 15%
-
-        .set-table-actions
-            flex  0 0 25%
+            flex  0 0 100%
 
         .set-table-activity
         .set-table-permission
+            display none
+
+.set-table-devices
+    .set-table-actions
+        flex 0 0 45%
+
+    +small-screen()
+        .set-table-date
+        .set-table-actions
             display none
